--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ gen
 .idea/**/gradle.xml
 .idea/**/libraries
 /gradle/*
+.gradle/*
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
